# public/swagger.json
@@ -17,6 +17,22 @@
 				],
 				"type": "object",
 				"description": "Basic JSON response for Controllers"
+			},
+			"ByeResponse": {
+				"properties": {
+					"Date": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"Date",
+					"message"
+				],
+				"type": "object",
+				"description": "JSON response for ByeController"
 			}
 		},
 		"securitySchemes": {}
@@ -60,6 +76,39 @@
 						"in": "query",
 						"name": "name",
 						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/api/goodbye": {
+			"get": {
+				"operationId": "GetMessage",
+				"responses": {
+					"200": {
+						"description": "Promise of BasicResponse",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ByeResponse"
+								}
+							}
+						}
+					}
+				},
+				"description": "Endpoint to retreive a Message \"Goodbye {name}\" and the date in JSON",
+				"tags": [
+					"ByeController"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"description": "Name of user to be greeted",
+						"in": "query",
+						"name": "name",
+						"required": true,
 						"schema": {
 							"type": "string"
 						}
